// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/anchor/demo/basic.md correctly 1`] = `
<div>
  <div class="">
    <div class="gov-anchor-wrapper" style="max-height: 100vh;">
      <div class="gov-anchor">
        <div class="gov-anchor-ink"><span class="gov-anchor-ink-ball"></span></div>
        <div class="gov-anchor-link"><a href="#components-anchor-demo-basic" title="Basic demo" class="gov-anchor-link-title">Basic demo</a></div>
        <div class="gov-anchor-link"><a href="#components-anchor-demo-static-anchor" title="Fixed demo" class="gov-anchor-link-title">Fixed demo</a></div>
        <div class="gov-anchor-link"><a href="#API" title="API" class="gov-anchor-link-title">API</a>
          <div class="gov-anchor-link"><a href="#Anchor-Props" title="Anchor Props" class="gov-anchor-link-title">Anchor Props</a></div>
          <div class="gov-anchor-link"><a href="#Link-Props" title="Link Props" class="gov-anchor-link-title">Link Props</a></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/anchor/demo/onClick.md correctly 1`] = `
<div class="gov-anchor-wrapper" style="max-height: 100vh;">
  <div class="gov-anchor fixed">
    <div class="gov-anchor-ink"><span class="gov-anchor-ink-ball"></span></div>
    <div class="gov-anchor-link"><a href="#components-anchor-demo-basic" title="Basic demo" class="gov-anchor-link-title">Basic demo</a></div>
    <div class="gov-anchor-link"><a href="#components-anchor-demo-static-anchor" title="Fixed demo" class="gov-anchor-link-title">Fixed demo</a></div>
    <div class="gov-anchor-link"><a href="#API" title="API" class="gov-anchor-link-title">API</a>
      <div class="gov-anchor-link"><a href="#Anchor-Props" title="Anchor Props" class="gov-anchor-link-title">Anchor Props</a></div>
      <div class="gov-anchor-link"><a href="#Link-Props" title="Link Props" class="gov-anchor-link-title">Link Props</a></div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/anchor/demo/static.md correctly 1`] = `
<div class="gov-anchor-wrapper" style="max-height: 100vh;">
  <div class="gov-anchor fixed">
    <div class="gov-anchor-ink"><span class="gov-anchor-ink-ball"></span></div>
    <div class="gov-anchor-link"><a href="#components-anchor-demo-basic" title="Basic demo" class="gov-anchor-link-title">Basic demo</a></div>
    <div class="gov-anchor-link"><a href="#components-anchor-demo-static-anchor" title="Fixed demo" class="gov-anchor-link-title">Fixed demo</a></div>
    <div class="gov-anchor-link"><a href="#API" title="API" class="gov-anchor-link-title">API</a>
      <div class="gov-anchor-link"><a href="#Anchor-Props" title="Anchor Props" class="gov-anchor-link-title">Anchor Props</a></div>
      <div class="gov-anchor-link"><a href="#Link-Props" title="Link Props" class="gov-anchor-link-title">Link Props</a></div>
    </div>
  </div>
</div>
`;
